# aviation_weather

./: .gitignore  README.md  pyproject.toml  setup.py
aviation_weather/: __init__.py  __main__.py  metars.py  tafs.py  tools.py
